# gsplat

./: MANIFEST.in  README.md  formatter.sh  pyproject.toml  setup.py
.github/workflows/: building_xpu.yml  core_tests.yml  doc.yml  generate_simple_index_pages.yml  publish_xpu.yml
.github/workflows/xpu/: Linux.sh  Windows.sh
docs/: Intel XPU.md  Intel_XPU.md
examples/: gsplat_viewer_2dgs.py  image_fitting.py  requirements.txt  requirements_xpu.txt  simple_trainer.py  simple_trainer_2dgs.py  simple_viewer.py  utils.py
examples/benchmarks/: basic.sh  basic_2dgs.sh  basic_4gpus.sh
gsplat/: __init__.py  _helper.py  _torch_impl.py  _torch_impl_2dgs.py  _wrapper.py  distributed.py  profile.py  relocation.py  rendering.py  utils.py
gsplat/cuda/: _wrapper.py
gsplat/optimizers/: selective_adam.py
gsplat/strategy/: default.py  mcmc.py  ops.py
gsplat/sycl/: CMakeLists.txt  _backend.py  _wrapper.py  ext.cpp
gsplat/sycl/include/: Common.h  Ops.h  Sycl_utils.hpp  gsplat_sycl_utils.hpp  helpers.hpp  proj.hpp  quat.hpp  quat_scale_to_covar_preci.hpp  spherical_harmonics.hpp  transform.hpp  types.hpp  utils.hpp
gsplat/sycl/include/kernels/: ComputeShBwdKernel.hpp  ComputeShFwdKernel.hpp  FullyFusedProjectionBwdKernel.hpp  FullyFusedProjectionFwdKernel.hpp  IsectOffsetEncodeKernel.hpp  IsectTilesKernel.hpp  PackedProjectionBwdKernel.hpp  PackedProjectionFwdKernel.hpp  ProjBwdKernel.hpp  ProjFwdKernel.hpp  Projection2DGSFusedBwdKernel.hpp  Projection2DGSFusedFwdKernel.hpp  QuatScaleToCovarPreciBwdKernel.hpp  QuatScaleToCovarPreciFwdKernel.hpp  RasterizeToPixels2DGSBwdKernel.hpp  RasterizeToPixels2DGSFwdKernel.hpp  RasterizeToPixelsBwdKernel.hpp  RasterizeToPixelsFwdKernel.hpp  RelocationKernel.hpp  WorldToCamBwdKernel.hpp  WorldToCamFwdKernel.hpp
gsplat/sycl/src/: adam.cpp  intersect_offset.cpp  intersect_tile.cpp  null.cpp  projection_2dgs_fused_bwd.cpp  projection_2dgs_fused_fwd.cpp  projection_2dgs_packed_bwd.cpp  projection_2dgs_packed_fwd.cpp  projection_ewa_3dgs_fused_bwd.cpp  projection_ewa_3dgs_fused_fwd.cpp  projection_ewa_3dgs_packed_bwd.cpp  projection_ewa_3dgs_packed_fwd.cpp  projection_ewa_simple_bwd.cpp  projection_ewa_simple_fwd.cpp  projection_ut_3dgs_fused.cpp  quat_scale_to_covar_preci_bwd.cpp  quat_scale_to_covar_preci_fwd.cpp  rasterize_to_indices_2dgs.cpp  rasterize_to_indices_3dgs.cpp  rasterize_to_pixels_2dgs_bwd.cpp  rasterize_to_pixels_2dgs_fwd.cpp  rasterize_to_pixels_3dgs_bwd.cpp  rasterize_to_pixels_3dgs_fwd.cpp  rasterize_to_pixels_from_world_3dgs_bwd.cpp  rasterize_to_pixels_from_world_3dgs_fwd.cpp  relocation.cpp  spherical_harmonics_bwd.cpp  spherical_harmonics_fwd.cpp
main/.doctrees/: environment.pickle
main/.doctrees/apis/: utils.doctree
profiling/: batch.py  main.py
tests/: _test_distributed.py  test_2dgs.py  test_basic.py  test_rasterization.py  test_strategy.py
versions/: index.txt
versions/1.5.3/: genindex.html  index.html  objects.inv  searchindex.js
versions/1.5.3/.doctrees/: environment.pickle
versions/1.5.3/.doctrees/apis/: rasterization.doctree  utils.doctree
versions/1.5.3/_modules/: index.html
versions/1.5.3/_modules/gsplat/: _wrapper.html  rendering.html
versions/1.5.3/_modules/gsplat/compression/: png_compression.html
versions/1.5.3/_modules/gsplat/strategy/: default.html  mcmc.html
versions/1.5.3/_sources/apis/: utils.rst.txt
versions/1.5.3/apis/: rasterization.html  strategy.html  utils.html
whl/pt210xpu/gsplat/: index.html
